2001-08-30  Don Porter  <dgp@users.sourceforge.net>

	* generic/tcl.h: Silence warning from Sun compiler. [Bug 454374]

2001-08-30  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclExecute.c: allow cached fully-qualified command names
	to be usable from different namespaces within the same interpreter
	without forcing a new lookup. This speeds up scripts that pass
	command names in variables ("this" in some OO packages).
	[Patch 456668]. 

2001-08-30 Vince Darley <vincentdarley@users.sourceforge.net>

	Further fs updates.  After examining the most common Tcl
	extensions (TclX, BLT, Tk, TclPro, Mktclapp), it has been
	determined that only TclpGetCwd and the Access/Stat/Open
	insert/delete hooks of the internal fs functions are ever used.
	The remaining functions from Tcl's internal interfaces have
	therefore been removed, since Tcl now exports a more suitable
	public API (Tcl_FS...)
	
	* generic/tclInt.stubs:
	* generic/tclInt.h: updated for removed internal functions.
	Some new internal functions have been put in tclInt.h (and
	not exported in the stub table because good public equivalents
	exist).
	* generic/tclTest.c: some test functions used the internal private 
	APIs.  These tests have been retained, but modified to use 
	public APIs.  Also objectified the internal filesystem tests.
	* win/tclWinFile.c: removed TclpStat, TclpAccess and refactored
	code to use NativeAccess, NativeStat.  This should speed up
	stat, access and glob commands.
	* win/tclWinFCmd.c: removed all TclpCopy/Rename/Delete 
	File/Directory string-based procedures which aren't used any more.
	Improved efficiency of some other procedures. Ensure that filename
	conversions with a NULL interp do not crash Tcl.
	* mac/tclMacFCmd.c: wrapped long lines and cleaned up
	TclpObjNormalizePath, removed all TclpCopy/Rename/Delete 
	File/Directory string-based procedures which aren't used any more.
	* mac/tclMacFile.c: removed obsolete TclpStat, TclpAccess, TclpChdir,
	etc.