@@ -177,7 +177,7 @@ Tcl_GetIndexFromObjStruct(interp, objPtr, tablePtr, offset, msg, flags,
     }
     
     for (entryPtr = tablePtr, i = 0; *entryPtr != NULL; 
-	    entryPtr = (char **) ((size_t) entryPtr + offset), i++) {
+	    entryPtr = (char **) ((char *) entryPtr + offset), i++) {
 	for (p1 = key, p2 = *entryPtr; *p1 == *p2; p1++, p2++) {
 	    if (*p1 == 0) {
 		index = i;
@@ -222,10 +222,10 @@ Tcl_GetIndexFromObjStruct(interp, objPtr, tablePtr, offset, msg, flags,
 	Tcl_AppendStringsToObj(resultPtr,
 		(numAbbrev > 1) ? "ambiguous " : "bad ", msg, " \"",
 		key, "\": must be ", *tablePtr, (char *) NULL);
-	for (entryPtr = (char **) ((size_t) tablePtr + offset), count = 0;
+	for (entryPtr = (char **) ((char *) tablePtr + offset), count = 0;
 		*entryPtr != NULL;
-		entryPtr = (char **) ((size_t) entryPtr + offset), count++) {
-	    if ((*((char **) ((size_t) entryPtr + offset))) == NULL) {
+		entryPtr = (char **) ((char *) entryPtr + offset), count++) {
+	    if ((*((char **) ((char *) entryPtr + offset))) == NULL) {
 		Tcl_AppendStringsToObj(resultPtr,
 			(count > 0) ? ", or " : " or ", *entryPtr,
 			(char *) NULL);
